k8s-manifests/environments/dev/networking/hello-route.yaml
# Walkthrough test: a new route added through Git.
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: hello-route
spec:
  gateways:
  - platform-gateway
  hosts:
  - "*"
  http:
  - name: hello
    match:
    - uri:
        exact: /hello
    rewrite:
      uri: /healthz
    route:
    - destination:
        host: frontend-api-svc.default.svc.cluster.local
        subset: stable
        port:
          number: 80
    headers:
      response:
        set:
          x-route: hello
